--- a/chat.html
+++ b/chat.html
@@ -144,7 +144,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="home.html">
+        <a href="index.html">
             <span class="icon"><i class="fas fa-home"></i></span>
             <span>Home</span>
         </a>
