--- a/edit_profile.html
+++ b/edit_profile.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="home.html">
+        <a href="index.html">
             <span class="icon"><i class="fas fa-home"></i></span>
             <span>Home</span>
         </a>
