--- a/goals.html
+++ b/goals.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="home.html">
+        <a href="index.html">
             <span class="icon"><i class="fas fa-home"></i></span>
             <span>Home</span>
         </a>
