--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,7 @@
 <body>
     <div class="header">
         <h1>User Profile</h1>
-        <a href="home.html" class="profile-icon">
+        <a href="index.html" class="profile-icon">
             <i class="fas fa-user-circle"></i>
         </a>
     </div>
@@ -104,7 +104,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="home.html">
+        <a href="index.html">
             <span class="icon"><i class="fas fa-home"></i></span>
             <span>Home</span>
         </a>
