--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         }
 
         function redirectToDietician() {
-            window.location.href = "payment.html";
+            window.location.href = "premium.html";
         }
     </script>
 </body>
