just another commit hehe

--- a/ask.html
+++ b/ask.html
@@ -118,24 +118,24 @@
         // Sample data for dieticians (this would typically come from a server)
         const dieticians = [
             {
-                name: "Dr. Jane Doe",
+                name: "Dr. Aarav Sharma",
                 specialty: "Weight Loss, Nutrition Plans",
-                price: "$50 per session"
+                price: "₹1,250 per session"
             },
             {
-                name: "Dr. John Smith",
+                name: "Dr. Riya Patel",
                 specialty: "Muscle Gain, Sports Nutrition",
-                price: "$60 per session"
+                price: "₹1,800 per session"
             },
             {
-                name: "Dr. Emily Davis",
+                name: "Dr. Devansh Singh",
                 specialty: "Vegetarian Nutrition, Weight Management",
-                price: "$55 per session"
+                price: "₹1,400 per session"
             },
             {
-                name: "Dr. Michael Brown",
+                name: "Dr. Siddharth Rao",
                 specialty: "Keto Diet, Meal Plans",
-                price: "$65 per session"
+                price: "₹1,900 per session"
             }
         ];
 
