--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+um<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -310,7 +310,7 @@
         }
 
         function redirectToDietician() {
-            window.location.href = 'dietician.html';
+            window.location.href = 'premium.html';
         }
     </script>
 </body>
