--- a/index.html
+++ b/index.html
@@ -47,16 +47,12 @@
         <div class="goal-selector">
             <label for="user-goal">Select Your Goal:</label>
             <select id="user-goal" onchange="updateUserGoal()">
+                <option value="" disabled selected>Select a goal</option>
                 <option value="muscle gain">Muscle Gain</option>
                 <option value="fat loss">Fat Loss</option>
-                <option value="balanced diet">Balanced Diet</option>
-                <option value="keto diet">Keto Diet</option>
-                <option value="high protein diet">High Protein Diet</option>
-                <option value="low carb diet">Low Carb Diet</option>
-                <option value="vegan diet">Vegan Diet</option>
-                <option value="low sodium diet">Low Sodium Diet</option>
-                <option value="high fiber diet">High Fiber Diet</option>
-            </select>
+                <option value="weight maintenance">Weight Maintenance</option>
+                <option value="muscle building">Muscle Building</option>
+                <option value="keto">Keto</option>
         </div>
 
         <p>Scan a product's nutritional label below:</p>
